fix image sizing problem on ios webkit

--- a/_sass/layout-page--team.scss
+++ b/_sass/layout-page--team.scss
@@ -147,6 +147,7 @@
             .member--photo{
                 img{
                     width: 80%;
+                    object-fit: contain;
                 }
             }
 
